force-app/main/default/objects/Solution_Focus_Reporting_Category__c/Solution_Focus_Reporting_Category__c.object-meta.xml
<CustomObject>
    <label>Solution Focus/Reporting Category</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Solution Focus/Reporting Category Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Focus/Reporting Category</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>