force-app/main/default/objects/Solution_Focus_Reporting_Category__c/fields/Solution_Focus_Reporting_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Solution_Focus_Reporting_Category_Name__c</fullName>
    <label>Solution Focus/Reporting Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>