force-app/main/default/objects/Solution_Focus_Reporting_Category__c/fields/Solution_Focus_Reporting_Category_Value__c.field-meta.xml
<CustomField>
    <fullName>Solution_Focus_Reporting_Category_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Focus/Reporting Category Value</label>
    <referenceTo>SolutionFocusReportingCategory__c</referenceTo>
    <relationshipName>Solution_Focus_Reporting_Category</relationshipName>
    <type>Lookup</type>
</CustomField>