force-app/main/default/objects/Solution_Focus_Reporting_Category__c/fields/SolutionFocusReportingCategoryName__c.field-meta.xml
<CustomField>
    <fullName>SolutionFocusReportingCategoryName__c</fullName>
    <formula>Solution_Focus_Reporting_Category_Value__r.Solution_Focus_Reporting_Category_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Focus Reporting Category Name</label>
    <type>Text</type>
</CustomField>