force-app/main/default/objects/Solution_Focus_Reporting_Category__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <referenceTo>VisitOps__Visit__c</referenceTo>
    <relationshipName>Solution_Focus_Reporting_Category</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>